- refactory no codigo.